--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title></title>
+  <title>WeatherX</title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 
@@ -17,15 +17,10 @@
       </form>
     </div>
   </section>
-  <section class="ajax-section">
-    <div class="container-fluid">
-    </div>
-  </section>
+
   <footer class="page-footer">
-    <div class="container">
       <small>Made with <span>❤</span> by <a href="https://twitter.com/Xemicolon" target="_blank">Xemicolon</a>
       </small>
-    </div>
   </footer>
 
 </body>
