--- a/views/weather.ejs
+++ b/views/weather.ejs
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title></title>
+  <title>WeatherX</title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 
@@ -27,7 +27,7 @@
             <span><sup class="country"><%= sys.country %></sup></span>
           </h2>
           <div class="weather-temp">
-            <h1 style="display: flex; justify-content: center; padding: 10px;" class="heading"><%= main.temp %> <sup
+            <h1 class="temp"><%= main.temp %> <sup
                 style="font-size: 30px;">°C</sup></h1>
           </div>
           <div class="weather-icon">
@@ -52,11 +52,9 @@
     </div>
   </section>
   <footer class="page-footer">
-    <div class="container">
-      <small>Made with <span>❤</span> by <a href="https://twitter.com/Xemicolon" target="_blank">Xemicolon</a>
-      </small>
-    </div>
-  </footer>
+    <small>Made with <span>❤</span> by <a href="https://twitter.com/Xemicolon" target="_blank">Xemicolon</a>
+    </small>
+</footer>
 
 </body>
 
