--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,14 +50,16 @@ body {
   font: 1rem/1.3 "Roboto", sans-serif;
   background: var(--bg_main);
   color: var(--text_dark);
-  padding: 50px;
 }
 
 .container {
-  width: 70%;
+  width: 100%;
   max-width: 1200px;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 10px 15px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .container-fluid {
@@ -73,19 +75,20 @@ body {
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .top-banner {
   color: var(--text_light);
+  background-color: #000;
 }
 
 .heading {
   font-weight: bold;
-  font-size: 4rem;
+  font-size: 3rem;
   letter-spacing: 0.02em;
-  padding: 0 0 30px 0;
 }
 
 .top-banner form {
   position: relative;
   display: flex;
   align-items: center;
+  padding: 10px;
 }
 
 .top-banner form input {
@@ -129,61 +132,18 @@ body {
   margin: 70px 0 20px;
 }
 
-.ajax-section .cities {
-  display: grid;
-  grid-gap: 32px 20px;
-  grid-template-columns: repeat(4, 1fr);
-}
-
-.ajax-section .city {
-  position: relative;
-  padding: 40px 10%;
-  border-radius: 20px;
-  background: var(--text_light);
-  color: var(--text_med);
-}
-
-.ajax-section .city::after {
-  content: '';
-  width: 90%;
-  height: 50px;
-  position: absolute;
-  bottom: -12px;
-  left: 5%;
-  z-index: -1;
-  opacity: 0.3;
-  border-radius: 20px;
-  background: var(--text_light);
-}
-
-.ajax-section figcaption {
-  margin-top: 10px;
-  text-transform: uppercase;
-  letter-spacing: 0.05em;
-}
-
-.ajax-section .city-temp {
-  font-size: 5rem;
+.temp {
+  display: flex; 
+  justify-content: center; 
+  padding: 10px;
   font-weight: bold;
-  margin-top: 10px;
-  color: var(--text_dark);
+  font-size: 5rem;
 }
 
-.ajax-section .city sup {
-  font-size: 0.5em;
-}
-
-.ajax-section .city-name sup {
-  padding: 0.2em 0.6em;
-  border-radius: 30px;
-  color: var(--text_light);
-  background: var(--orange);
-}
-
-.ajax-section .city-icon {
-  margin-top: 10px;
-  width: 100px;
-  height: 100px;
+sup {
+  font-size: 30px;
+  margin-left: -10px;
+  font-weight: bold;
 }
 
 .weather-box {
@@ -243,14 +203,19 @@ body {
 /* FOOTER
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .page-footer {
-  text-align: right;
   font-size: 1rem;
   color: var(--text_light);
-  margin-top: 40px;
+  margin-top: 70px;
+  padding: 20px 20px;
+  display: flex;
 }
 
 .page-footer span {
   color: var(--red);
+}
+
+small {
+  margin: 0 auto;
 }
 
 
