--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -50,6 +50,8 @@ body {
   font: 1rem/1.3 "Roboto", sans-serif;
   background: var(--bg_main);
   color: var(--text_dark);
+  margin: 0;
+  padding: 0;
 }
 
 .container {
@@ -71,11 +73,66 @@ body {
   background-color: #fff;
 }
 
+.weather-container {
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  margin: 0 auto;
+  width: 80%;
+  background-color: #fff;
+}
+
+.hidden {
+  display: none;
+}
+
+.display {
+  display: block;
+}
+
+.loading {
+  color: var(--text_light);
+  width: 100%;
+  text-align: center;
+}
+
+.map {
+  background-color: var(--text_dark);
+}
+
+.lngLat {
+  display: flex;
+  width: 40%;
+  justify-content: space-evenly;
+  margin: auto;
+  margin-top: 20px;
+}
+
+.btn {
+  padding: 10px;
+  display: flex;
+  margin: auto;
+  margin-top: 20px;
+  color: #fff;
+  border-radius: 10px;
+  background-color: var(--red)
+}
+
+.lg, .lt {
+  color: var(--text_light)
+}
+
+.lon, .lat {
+  padding: 10px; 
+  background-color: #eee;
+  border: 1px solid #000;
+  border-radius: 6px;
+}
 /* SECTION #1
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .top-banner {
   color: var(--text_light);
-  background-color: #000;
+  background-color: #101010;
 }
 
 .heading {
@@ -137,17 +194,17 @@ body {
   justify-content: center; 
   padding: 10px;
   font-weight: bold;
-  font-size: 5rem;
-}
-
-sup {
-  font-size: 30px;
-  margin-left: -10px;
-  font-weight: bold;
+  font-size: 3rem;
 }
 
 .weather-box {
   text-align: center;
+}
+
+.longlat {
+  margin-top: 20px;
+  font-size: 1.3rem;
+  font-weight: bold;
 }
 
 
@@ -158,6 +215,17 @@ sup {
 }
 
 .weather-name {
+  color: var(--text_dark);
+  font-size: 2rem;
+  letter-spacing: 0.02em;
+  padding-top: 20px;
+}
+
+.weather-description {
+  font-size: 20px;
+}
+
+.name {
   color: var(--text_dark);
   font-size: 2rem;
   letter-spacing: 0.02em;
@@ -200,6 +268,23 @@ sup {
   border-bottom-right-radius: 10px;
 }
 
+.error {
+  color: red;
+  padding: 30px;
+  font-weight: bold;
+  font-size: 2rem;
+}
+
+.smile {
+  padding: 30px;
+  font-weight: bold;
+}
+
+.link {
+  font-size: 20px;
+  margin: 10px 0;
+}
+
 /* FOOTER
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .page-footer {
@@ -221,17 +306,28 @@ small {
 
 /* MQ
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
-@media screen and (max-width: 1000px) {
-  body {
-    padding: 30px;
-  }
-  
+@media screen and (min-width: 729px) and (max-width: 1000px) {
+
   .ajax-section .cities {
     grid-template-columns: repeat(3, 1fr);
   }
+
+
+  .top-banner form input {
+    font-size: 1.5rem;
+  }
+
+  .top-banner form button {
+    font-size: .7rem
+  }
+
+
+  .x {
+    font-size: 1.8rem
+  }
 }
 
-@media screen and (max-width: 700px) {
+@media screen and (min-width: 320px) and (max-width: 728px) {
   .heading,
   .ajax-section .city-temp {
     font-size: 3rem;
@@ -244,6 +340,7 @@ small {
   .container-fluid {
     width: 80%
   }
+
   
   .top-banner form {
     flex-direction: column;
@@ -269,13 +366,18 @@ small {
   .ajax-section .cities {
     grid-template-columns: repeat(2, 1fr);
   }
+
+  .weatherx {
+    display: flex;
+    flex-flow: column;
+  }
+  .weatherx a {
+    margin-bottom: 30px;
+  }
 }
 
 @media screen and (max-width: 500px) {
-  body {
-    padding: 15px;
-  }
-  
+
   .ajax-section .cities {
     grid-template-columns: repeat(1, 1fr);
   }
