--- a/views/weather.ejs
+++ b/views/weather.ejs
@@ -2,16 +2,20 @@
 <html>
 
 <head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="initial-scale=1,maximum-scale=1,user-scalable=no" />
+  <link rel="stylesheet" href="/stylesheets/style.css" />
   <title>WeatherX</title>
-  <link rel='stylesheet' href='/stylesheets/style.css' />
 </head>
 
 <body>
   <section class="top-banner">
-    <div class="container">
-      <h1 class="heading">WeatherX</h1>
+    <div class="container weatherx">
+      <a href="/">
+        <h1 class="heading x">WeatherX</h1>
+      </a>
       <form method="post" action="/weather">
-        <input type="text" placeholder="Search for a city" name="city" autofocus>
+        <input type="text" placeholder="Search for a city" name="city" required autofocus>
         <button type="submit">SUBMIT</button>
         <span class="msg"></span>
       </form>
@@ -21,41 +25,49 @@
     <div class="container-fluid">
       <div class="weather-info">
         <div class="weather-box">
-          <% if (data !== null) { %>
+          <% if (data) { %>
           <% const { main, name, sys, weather} = data %>
+
           <h2 class="weather-name"><%= name %>
             <span><sup class="country"><%= sys.country %></sup></span>
           </h2>
+
           <div class="weather-temp">
-            <h1 class="temp"><%= main.temp %> <sup
-                style="font-size: 30px;">°C</sup></h1>
+            <h1 class="temp"><%= main.temp %> <sup style="font-size: 30px;">°C</sup></h1>
           </div>
+
           <div class="weather-icon">
+
             <% for (icon of weather) { %>
             <img style="margin: auto" width="80" height="80"
               src="http://openweathermap.org/img/w/<%= icon.icon %>.png" />
             <% } %>
             <p><%= icon.description.toUpperCase() %></p>
+
+          </div>
+
+          <div class="time-date">
+            <h2 class="date"><%= date() %></h2>
+            <h2 class="time"><%= time() %></h2>
+          </div>
+
+          <% } else { %>
+          <h2 class="smile">It's a beautiful day. Smile :)</h2>
+          <div class="time-date">
+            <h2 class="date"><%= date() %></h2>
+            <h2 class="time"><%= time() %></h2>
           </div>
           <% } %>
-
         </div>
-
       </div>
-      <div class="time-date">
-        <h2 class="date"><%= date() %></h2>
-        <h2 class="time"><%= time() %></h2>
-      </div>
-     
-
-
     </div>
+    <div style="color: #fff; text-align: center;" class="link"><a href="/">Go back to homepage</a></div>
   </section>
+
   <footer class="page-footer">
     <small>Made with <span>❤</span> by <a href="https://twitter.com/Xemicolon" target="_blank">Xemicolon</a>
     </small>
-</footer>
-
+  </footer>
 </body>
 
 </html>
